# -otus-pdp-2024-final-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: base.yml
src/tech_seeker/: __init__.py
src/tech_seeker/abstractions/: __init__.py  abstract_file_context.py  abstract_mapper.py  abstract_project_context.py
src/tech_seeker/mappings/: python.yaml
src/tech_seeker/models/: __init__.py  dependency.py  technology.py  technology_mapping.py
src/tech_seeker/scanner/: __init__.py  mapper.py  scaner.py
src/tech_seeker/scanner/contexts/: __init__.py  local_directory_context.py
src/tech_seeker/scanner/sensors/: __init__.py  base.py  python_poetry.py  python_rye.py  python_uv.py
tests/unit/scaner/: test_mapper.py  test_scaner.py
tests/unit/scaner/contexts/: test_local_directory_context.py
tests/unit/scaner/sensors/: test_base_sensor.py  test_python_poetry_sensor.py  test_sensor_registry.py  test_uv_sensor.py
