[project]
name = "tech-seeker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dmitry Salamatov", email = "dmitry.salamatov@russianpost.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.5",
]

[project.scripts]
tech-seeker = "tech_seeker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_column_numbers = true
no_error_summary = true
check_untyped_defs = true